syntax = "proto2";

package netng.protos;

message EvalConfig {
  // Input queue batch size.
  optional uint32 batch_size = 1 [default=1];

  // How often to run evaluation.
  optional uint32 eval_interval_secs = 2 [default=300];

  // Maximum number of images to visualize in tensorboard; -1 for no limit
  optional int32 num_images_to_visualize = 4;

  repeated float metric_thresholds = 5 [packed=true];

  optional bool shuffle = 6;

  optional int32 shuffle_buffer_size = 7;
}