syntax = "proto2";

package netng.protos;

import "protos/faster_rcnn.proto";
import "protos/unet.proto";

message Model {
  optional int32 input_image_size_x = 1;
  optional int32 input_image_size_y = 2;
  optional int32 input_image_channels = 3;
  
  oneof model_type {
    FasterRCNN faster_rcnn = 4;
    UNet unet = 5;
  }

  // Should only be used with batch size > 1
  optional bool use_batch_norm = 6;
  optional float batch_norm_momentum = 7;
  optional float batch_norm_epsilon = 8;
}